--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
         <item>Medium</item>
         <item>High</item>
     </string-array>
+    <string-array name="modify_actions">
+        <item>Edit</item>
+        <item>Remove</item>
+    </string-array>
 </resources>
